syntax = "proto3";

import "project_service.proto";

option csharp_namespace = "IdeaStatiCa.CheckbotPlugin.Protos";

package ideastatica.checkbotplugin.v1;

service EventService {
    rpc Subscribe(SubscribeReq) returns (stream Event);
}

message SubscribeReq { }

message Event {
    oneof event {
        EventPluginStop plugin_stop = 1;
        EventProcedureBegin procedure_begin = 2;
        EventOpenCheckApplication open_check_application = 3;
    }
}

message EventPluginStop { }

message EventProcedureBegin { }

message EventOpenCheckApplication { 
    ModelObject object = 1;
}