syntax = "proto3";

option csharp_namespace = "IdeaStatiCa.CheckbotPlugin.Protos";

package ideastatica.checkbotplugin.v1;

service StorageService {
	rpc Set(SetReq) returns (SetResp);
	rpc Get(GetReq) returns (GetResp);
	rpc Delete(DeleteReq) returns (DeleteResp);
	rpc Exists(ExistsReq) returns (ExistsResp);
}

message SetReq {
	string key = 1;
	bytes value = 2;
}

message SetResp { }


message GetReq {
	string key = 1;
}

message GetResp {
	bool success = 1;
	bytes value = 2;
}


message DeleteReq {
	string key = 1;
}

message DeleteResp {
	bool success = 1;
}


message ExistsReq {
	string key = 1;
}

message ExistsResp {
	bool exists = 1;
}